started new design and refactored code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <div id="game">
     <p id="counter">Money: 0</p>
+    <div class="row" id="firstRow"></div>
+    <div class="row" id="secondRow"></div>
   </div>
   
   <script src="scripts/build_page.js"></script>
